form pendaftaran peserta

--- a/frontend/admin/pendaftaran.html
+++ b/frontend/admin/pendaftaran.html
@@ -280,11 +280,12 @@
                 <th>Nama Peserta</th>
                 <th>NIK</th>
                 <th>NIP</th>
+                <th>Jenis Nakes</th>
+                <th>Jabatan</th>
                 <th>Pelatihan</th>
                 <th>Jenis Kelamin</th>
                 <th>No WA</th>
                 <th>Email</th>
-                <th>Profesi</th>
                 <th>Surat Tugas</th>
                 <th>Foto</th>
                 <th>Status</th>
@@ -548,11 +549,12 @@
                   <td>${item.nama_peserta}</td>
                   <td>${item.nik}</td>
                   <td>${item.nip ?? "-"}</td>
+                  <td>${item.jenis_nakes ?? "-"}</td>
+                  <td>${item.jabatan ?? "-"}</td>
                   <td>${item.nama_pelatihan ?? "-"}</td>
                   <td>${item.jenis_kelamin}</td>
                   <td>${item.no_wa}</td>
                   <td>${item.email}</td>
-                  <td>${item.profesi ?? "-"}</td>
 
                   <td>
                     ${
