--- a/frontend/admin/sertifikat.html
+++ b/frontend/admin/sertifikat.html
@@ -177,6 +177,9 @@
                 <li>
                   <a class="dropdown-item" href="logadmin.html">Log Admin</a>
                 </li>
+                <li>
+                  <a class="dropdown-item" href="logemail.html">Log Email</a>
+                </li>
                 <!-- item superadmin akan ditambahkan lewat JS -->
               </ul>
             </li>
